--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "homepage": "https://github.com/Darkheadbanger/DavidBouhaben_personal_project_CV_ePortofolio#readme",
   "devDependencies": {
     "rewire": "^5.0.0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "flag-icon-css": "^4.1.7",
+    "font-awesome": "^4.7.0"
   }
 }
